--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN POPI</title>
+    <title>PLN GUN sos</title>
     <style>
         * {
             margin: 0;
@@ -1236,7 +1236,7 @@
 //const axios = require('axios'); // Utilisez axios pour les requêtes HTTP (ou fetch si vous préférez)
 
 // Votre clé API YouTube
-const API_KEY = 'AIzaSyD7UGkJeO6DrgZjBkC4GXpsOO0VSxWr2K4';
+//const API_KEY = 'AIzaSyD7UGkJeO6DrgZjBkC4GXpsOO0VSxWr2K4';
 
 // Votre constante pour stocker les URLs des vignettes
         /*
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
