--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
     <!-- Barre de navigation -->
     <nav id="nav">
         <div class="nav-logo">
-            <img src="https://via.placeholder.com/40x40?text=Logo" alt="PLN Prod Logo">
+            <img src="logo.jpg" alt="PLN Prod Logo">
             <p>PLN Prod</p>
         </div>
         <ul>
@@ -1936,6 +1936,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
