--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
-                    <h1>Concert de Conservatoire</h1>
+                    <h1>Concerts</h1>
                     <button onclick="showVideo('project4')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1000,7 +1000,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                  <div class="content">
-                    <h1>Concert de fin de stage</h1>
+                    <h1>Concours</h1>
                     <button onclick="showVideo('project5')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1012,7 +1012,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 
                 <div class="content">
-                    <h1>Concert thématique</h1>
+                    <h1>Ateliers, répétitions,...</h1>
                     <button onclick="showVideo('project6')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1204,15 +1204,18 @@
             project1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 1", description: "Description du projet 1..." },
             project2: { url: "https://www.youtube.com/embed/9bZkp7q19f0", title: "Projet 2", description: "Description du projet 2..." },
             project3: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 3", description: "Description du projet 3..." },
-            project4: { url: "https://www.youtube.com/embed/cVMxBTPFjIs?si=OWiPdsMlIPWcSLGq", title: "Concert de Conservatoire", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Lors de ce concert, les instrumentistes présentent leur travail réalisé tout au long de l’année." },
-            video401: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Ode à la joie", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de l'<i>Ode à la Joie</i> de Ludwig van Beethoven." },
-            video402: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "West Side Story", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
-            video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
-            project5: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
-            video501: { url: "https://www.youtube.com/embed/z2Ge4Et5-98?si=UBGoMDYYAk_iSO9U", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une pièce d'ensemble <i>Techno</i> de Jürg Kindle, compositeur suisse contemporain." },
-            video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une étude de Matteo Carcassi (compositeur italien du début du 19ème siécle)" },
-            video503: { url: "https://www.youtube.com/embed/CKqNgZslIKU?si=oi3QwpMIiM8-KZF2", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, les quatre premières valses poétiques de Enrique Granados." },
-            project6: { url: "https://www.youtube.com/embed/GEgkFXc5XWY?si=dlX3mUyiUyAipM5c", title: "Projet 6", description: "Description du projet 6..." },
+            project4: { url: "https://www.youtube.com/embed/cVMxBTPFjIs?si=OWiPdsMlIPWcSLGq", title: "Concert de conservatoire", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Lors de ce concert, les instrumentistes présentent leur travail réalisé tout au long de l’année." },
+            //video401: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Ode à la joie", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de l'<i>Ode à la Joie</i> de Ludwig van Beethoven." },
+            //video402: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "West Side Story", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
+            //video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
+            video404: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video405: { url: "https://www.youtube.com/embed/GEgkFXc5XWY?si=dlX3mUyiUyAipM5c", title: "Concert BACH", description: "Lors de ce concert à l'église Saint Martin d'Acigné, cinq concertistes (Mezzo-Soprano, Baryton-Basse, Orgue, Violon, Hautbois) interprétaient des oeuvres de Jean-Sébastien Bach." },
+            project5: { url: "https://www.youtube.com/embed/zKE6wBm37aw?si=n7ErRAjwdzKJhWF9", title: "Concours, enregistrement studio,...", description: "Présentation vidéo du Duo Humus dans le cadre de sa participation au Concours Bellan 2025. Nous écoutons ici les quatre premières valses poétiques de Enrique Granados" },
+            video501: { url: "https://www.youtube.com/embed/x-7W1ZQYctA?si=mkMvKOfcBN7Rhyw2", title: "Making of de l'enregistrement des Valses poétiques - E. Granados", description: "Dans la cadre du concours Bellan, la présélection des candidat est effectuée sur sélection vidéo. Le Duo Humus avait enregistré sa vidéo de participation à l'auditorium du Conservation de Rennes en sollicitant ses capacité d'enregistrement studio." },
+            //video501: { url: "https://www.youtube.com/embed/z2Ge4Et5-98?si=UBGoMDYYAk_iSO9U", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une pièce d'ensemble <i>Techno</i> de Jürg Kindle, compositeur suisse contemporain." },
+            //video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une étude de Matteo Carcassi (compositeur italien du début du 19ème siécle)" },
+            //video503: { url: "https://www.youtube.com/embed/CKqNgZslIKU?si=oi3QwpMIiM8-KZF2", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, les quatre premières valses poétiques de Enrique Granados." },
+            project6: { url: "https://www.youtube.com/embed/hWDx8kS7mF4?si=W3yOnYQcXluJI3CB", title: "Atelier", description: "Cette vidéo de présentation d'une prestation musicale fictive met en évidence la valorisarion potentielle d'une séance de travail, son aboutissement ou tout autre aspect à mettre en valeur." },
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
             project9: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 9", description: "Description du projet 9..." },
@@ -1237,10 +1240,12 @@
     video401: "https://i9.ytimg.com/vi_webp/ivcBJ4Bbm68/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWChAMA8=&rs=AOn4CLBmrBfzWPmJ29BzVUtEoLyOgwAE_A",
     video402: "https://i9.ytimg.com/vi_webp/hsVlgnPXVec/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB94aW9DJ8Bu4EE8ccd87iOsYS3ug",
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CICF6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLD-8kcHBSB7xJMmUtqeNdZ5__f9gw",
+    video404: "https://i9.ytimg.com/vi_webp/hsVlgnPXVec/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB94aW9DJ8Bu4EE8ccd87iOsYS3ug",
+    video405: "https://i9.ytimg.com/vi_webp/hsVlgnPXVec/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB94aW9DJ8Bu4EE8ccd87iOsYS3ug",
     project5: "https://i9.ytimg.com/vi_webp/O70wUdl1PEc/mq2.webp?sqp=CPDS5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGFYgYihlMA8=&rs=AOn4CLBHqb1ZwYaVcH5Wd_mk7viqK-XZ8A",
     video501: "https://i9.ytimg.com/vi/z2Ge4Et5-98/mqdefault.jpg?sqp=CKDp6sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGQgZShSMA8=&rs=AOn4CLCxewrAlj7mp3TFk2OdY8yTsolaCw",
-    video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
-    video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
+    //video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
+    //video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
     project6: "https://i9.ytimg.com/vi_webp/GEgkFXc5XWY/mq2.webp?sqp=COz6gMYG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGH8gRSgiMA8=&rs=AOn4CLDe1FpQH51kxZKjXXdgFsdLTZdwiA",
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
@@ -1262,8 +1267,8 @@ const relatedVideosMapping = {
     project1: ['project2', 'project3', 'video1'],
     project2: ['project1', 'project4', 'video2'],
     project3: ['project2', 'project5', 'video3'],
-    project4: ['video401', 'video402', 'video403'],
-    project5: ['video501', 'video502', 'video503'],
+    project4: ['project4', 'video404', 'video405'],
+    project5: ['project4', 'video501'],
     project6: ['project5', 'project8', 'video3'],
     project7: ['project6', 'project9', 'video1'],
     project8: ['project7', 'project10', 'video2'],
