--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNbabari</title>
+    <title>PLN GUNbabrrr</title>
     <style>
         * {
             margin: 0;
@@ -1268,12 +1268,12 @@ const relatedVideosMapping = {
     project2: ['project1', 'project4', 'video2'],
     project3: ['project2', 'project5', 'video3'],
     project4: ['project4', 'video404', 'video405'],
-    project5: ['project4', 'video501'],
-    project6: ['project5', 'project8', 'video3'],
-    project7: ['project6', 'project9', 'video1'],
-    project8: ['project7', 'project10', 'video2'],
-    project9: ['project8', 'project11', 'video3'],
-    project10: ['video101', 'video102', 'video103', 'video104'],
+    project5: ['project5', 'video501'],
+    project6: ['project6', 'project8', 'video3'],
+    project7: ['project7', 'project9', 'video1'],
+    project8: ['project8', 'project10', 'video2'],
+    project9: ['project9', 'project11', 'video3'],
+    project10: ['project10','video101', 'video102', 'video103', 'video104'],
     project11: ['project10', 'project1', 'video2'],
     project12: ['project11', 'project2', 'video3'],
     video1: ['project1', 'project2', 'video2'],
@@ -1941,6 +1941,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
