--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNbabrrr</title>
+    <title>PLN GUNbabrrro</title>
     <style>
         * {
             margin: 0;
@@ -1211,7 +1211,7 @@
             video404: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
             video405: { url: "https://www.youtube.com/embed/GEgkFXc5XWY?si=dlX3mUyiUyAipM5c", title: "Concert BACH", description: "Lors de ce concert à l'église Saint Martin d'Acigné, cinq concertistes (Mezzo-Soprano, Baryton-Basse, Orgue, Violon, Hautbois) interprétaient des oeuvres de Jean-Sébastien Bach." },
             project5: { url: "https://www.youtube.com/embed/zKE6wBm37aw?si=n7ErRAjwdzKJhWF9", title: "Concours, enregistrement studio,...", description: "Présentation vidéo du Duo Humus dans le cadre de sa participation au Concours Bellan 2025. Nous écoutons ici les quatre premières valses poétiques de Enrique Granados" },
-            video501: { url: "https://www.youtube.com/embed/x-7W1ZQYctA?si=mkMvKOfcBN7Rhyw2", title: "Making of de l'enregistrement des Valses poétiques - E. Granados", description: "Dans la cadre du concours Bellan, la présélection des candidat est effectuée sur sélection vidéo. Le Duo Humus avait enregistré sa vidéo de participation à l'auditorium du Conservation de Rennes en sollicitant ses capacité d'enregistrement studio." },
+            video501: { url: "https://www.youtube.com/embed/x-7W1ZQYctA?si=mkMvKOfcBN7Rhyw2", title: "Making of de l'enregistrement studio", description: "Dans la cadre du concours Bellan 2025, la présélection des candidats est effectuée sur sélection vidéo. Le Duo Humus avait enregistré sa vidéo de participation à l'auditorium du Conservation de Rennes en sollicitant ses capacités d'enregistrement studio." },
             //video501: { url: "https://www.youtube.com/embed/z2Ge4Et5-98?si=UBGoMDYYAk_iSO9U", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une pièce d'ensemble <i>Techno</i> de Jürg Kindle, compositeur suisse contemporain." },
             //video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une étude de Matteo Carcassi (compositeur italien du début du 19ème siécle)" },
             //video503: { url: "https://www.youtube.com/embed/CKqNgZslIKU?si=oi3QwpMIiM8-KZF2", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, les quatre premières valses poétiques de Enrique Granados." },
@@ -1941,6 +1941,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
