--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
             </div>
             <div class="mosaic-item" data-project="project6">
                <video autoplay muted loop playsinline>
-                  <source src="Acigne_loop.mp4" type="video/mp4">
+                  <source src="Goldberg_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 
                 <div class="content">
@@ -1941,6 +1941,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
