--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
     project9: "https://media.giphy.com/media/3o6ZtaO9BZHcOjmErm/giphy.gif",
-    project10: "https://media.giphy.com/media/l0Iyl55kTeh71nTWw/giphy.gif",
+    project10: "https://i.ytimg.com/vi/cM4NBRcUd4Q/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCHls-NTNYL-Su1s2vNo1hH5QcReQ",
     project11: "https://media.giphy.com/media/26FPy3G0rLKBPlrB6/giphy.gif",
     project12: "https://media.giphy.com/media/3o7TKF0r3wY2f2gQ6k/giphy.gif",
     video1: "https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif",
@@ -1941,6 +1941,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
