--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
                </video> 
                 <div class="content">
                     <h1>Concerts</h1>
-                    <button onclick="showVideo('project4')">Lire la vidéo</button>
+                    <button onclick="showVideo('project4')">Accéder aux concerts</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
             </div>
@@ -1941,6 +1941,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
