--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,8 @@
             //video402: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "West Side Story", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
             //video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
             video404: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
-            video405: { url: "https://www.youtube.com/embed/GEgkFXc5XWY?si=dlX3mUyiUyAipM5c", title: "Concert BACH", description: "Lors de ce concert à l'église Saint Martin d'Acigné, cinq concertistes (Mezzo-Soprano, Baryton-Basse, Orgue, Violon, Hautbois) interprétaient des oeuvres de Jean-Sébastien Bach." },
+            video405: { url: "https://www.youtube.com/embed/GEgkFXc5XWY?si=dlX3mUyiUyAipM5c", title: "Concert BACH", description: "Lors de ce concert à l'église Saint Martin d'Acigné, cinq concertistes (Mezzo-Soprano, Baryton-Basse, Orgue, Violon, Hautbois) interprétent des oeuvres de Jean-Sébastien Bach." },
+            video406: { url: "https://www.youtube.com/embed/Y1pTrvMggwY?si=zd4RH2WDLSaPKAnh", title: "Concert Guitare romantique et voix lyriques", description: "Lors de ce concert au Panama café à Rennes, trois concertistes (Mezzo-Soprano, Baryton-Basse, Guitariste) interprétent des oeuvres de Manuel de Falla, Franz Schubert, Sergei Rudnev, Georges Bizet, Wolfgang Amadeus Mozart, Vincenzo Bellini." },
             project5: { url: "https://www.youtube.com/embed/zKE6wBm37aw?si=n7ErRAjwdzKJhWF9", title: "Concours, enregistrement studio,...", description: "Présentation vidéo du Duo Humus dans le cadre de sa participation au Concours Bellan 2025. Nous écoutons ici les quatre premières valses poétiques de Enrique Granados" },
             video501: { url: "https://www.youtube.com/embed/x-7W1ZQYctA?si=mkMvKOfcBN7Rhyw2", title: "Making of de l'enregistrement studio", description: "Dans la cadre du concours Bellan 2025, la présélection des candidats est effectuée sur sélection vidéo. Le Duo Humus avait enregistré sa vidéo de participation à l'auditorium du Conservation de Rennes en sollicitant ses capacités d'enregistrement studio." },
             //video501: { url: "https://www.youtube.com/embed/z2Ge4Et5-98?si=UBGoMDYYAk_iSO9U", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une pièce d'ensemble <i>Techno</i> de Jürg Kindle, compositeur suisse contemporain." },
@@ -1242,6 +1243,7 @@
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CICF6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLD-8kcHBSB7xJMmUtqeNdZ5__f9gw",
     video404: "py.jpg",
     video405: "acigné.webp",
+    video406: "panama.webp",
     project5: "humus.jpg",
     video501: "humus making of.webp",
     //video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
@@ -1267,7 +1269,7 @@ const relatedVideosMapping = {
     project1: ['project2', 'project3', 'video1'],
     project2: ['project1', 'project4', 'video2'],
     project3: ['project2', 'project5', 'video3'],
-    project4: ['project4', 'video404', 'video405'],
+    project4: ['project4', 'video404', 'video405', 'video406'],
     project5: ['project5', 'video501'],
     project6: ['project6', 'project8', 'video3'],
     project7: ['project7', 'project9', 'video1'],
@@ -1941,6 +1943,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
