--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNbabrrro</title>
+    <title>PLN GUNbapopopoo</title>
     <style>
         * {
             margin: 0;
@@ -1243,7 +1243,7 @@
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CICF6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLD-8kcHBSB7xJMmUtqeNdZ5__f9gw",
     video404: "py.jpg",
     video405: "acigné.webp",
-    video406: "panama.webp",
+    video406: "panama.jpg",
     project5: "humus.jpg",
     video501: "humus making of.webp",
     //video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
@@ -1943,6 +1943,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
