--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN mobile</title>
+    <title>PLN mobile o</title>
     <style>
         * {
             margin: 0;
@@ -2562,3 +2562,4 @@ function prevRow() {
     }
     initArrows();
 }
+
