--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
     <!-- Barre de navigation -->
     <nav id="nav">
         <div class="nav-logo">
-            <img src="images/logo.jpg" alt="PLN Prod Logo">
+            <img src="/images/logo.jpg" alt="PLN Prod Logo">
             <p>PLN Prod</p>
         </div>
         <ul>
@@ -1943,6 +1943,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
