--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
         <div class="mosaic-container" id="mosaic">
             <div class="mosaic-item" data-project="project1">
               <video autoplay muted loop playsinline>
-                  <source src="images/guitare_loop.mp4" type="video/mp4">
+                  <source src="/images/guitare_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                <div class="content">
@@ -985,7 +985,7 @@
             </div>
             <div class="mosaic-item" data-project="project4">
               <video autoplay muted loop playsinline>
-                  <source src="images/orchestre_loop.mp4" type="video/mp4">
+                  <source src="/images/orchestre_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -996,7 +996,7 @@
             </div>
             <div class="mosaic-item" data-project="project5">
               <video autoplay muted loop playsinline>
-                  <source src="images/Valses Poétiques_loop.mp4" type="video/mp4">
+                  <source src="/images/Valses Poétiques_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                  <div class="content">
@@ -1008,7 +1008,7 @@
             </div>
             <div class="mosaic-item" data-project="project6">
                <video autoplay muted loop playsinline>
-                  <source src="images/Golberg_loop.mp4" type="video/mp4">
+                  <source src="/images/Golberg_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 
                 <div class="content">
@@ -1019,7 +1019,7 @@
             </div>
             <div class="mosaic-item" data-project="project7">
                <video autoplay muted loop playsinline>
-                  <source src="images/cascade_loop.mp4" type="video/mp4">
+                  <source src="/images/cascade_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1030,7 +1030,7 @@
             </div>
             <div class="mosaic-item" data-project="project8">
                <video autoplay muted loop playsinline>
-                  <source src="images/nature_loop.mp4" type="video/mp4">
+                  <source src="/images/nature_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1042,7 +1042,7 @@
             </div>
             <div class="mosaic-item" data-project="project9">
                 <video autoplay muted loop playsinline>
-                  <source src="images/magnolia_loop.mp4" type="video/mp4">
+                  <source src="/images/magnolia_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 <div class="content">
                     <h1>Jardin de rêve</h1>
@@ -1052,7 +1052,7 @@
             </div>
             <div class="mosaic-item" data-project="project10">
                <video autoplay muted loop playsinline>
-                  <source src="images/arc_loop.mp4" type="video/mp4">
+                  <source src="/images/arc_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
 
@@ -1064,7 +1064,7 @@
             </div>
             <div class="mosaic-item" data-project="project11">
                <video autoplay muted loop playsinline>
-                  <source src="images/ski_loop.mp4" type="video/mp4">
+                  <source src="/images/ski_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1076,7 +1076,7 @@
             </div>
             <div class="mosaic-item" data-project="project12">
                <video autoplay muted loop playsinline>
-                  <source src="images/yoga_loop.mp4" type="video/mp4">
+                  <source src="/images/yoga_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 <div class="content">
                     <h1>Autres sports</h1>
@@ -1237,18 +1237,18 @@
     project1: "https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif",
     project2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
     project3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
-    project4: "images/cordissimo.jpg",
+    project4: "/images/cordissimo.jpg",
     video401: "https://i9.ytimg.com/vi_webp/ivcBJ4Bbm68/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWChAMA8=&rs=AOn4CLBmrBfzWPmJ29BzVUtEoLyOgwAE_A",
     video402: "https://i9.ytimg.com/vi_webp/hsVlgnPXVec/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB94aW9DJ8Bu4EE8ccd87iOsYS3ug",
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CICF6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLD-8kcHBSB7xJMmUtqeNdZ5__f9gw",
-    video404: "images/py.jpg",
-    video405: "images/acigné.webp",
-    video406: "images/panama.jpg",
-    project5: "images/humus.jpg",
-    video501: "images/humus making of.webp",
+    video404: "/images/py.jpg",
+    video405: "/images/acigné.webp",
+    video406: "/images/panama.jpg",
+    project5: "/images/humus.jpg",
+    video501: "/images/humus making of.webp",
     //video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
     //video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
-    project6: "images/goldberg.jpg",
+    project6: "/images/goldberg.jpg",
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
     project9: "https://media.giphy.com/media/3o6ZtaO9BZHcOjmErm/giphy.gif",
@@ -1943,6 +1943,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
