--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>PLN mobile compatiblo</title>
-
+    <title>PLN GUN</title>
     <style>
         * {
             margin: 0;
@@ -568,7 +566,6 @@
 
         .bio-link:hover {
             color: #2980b9;
-
         }
 
         .bio-image {
@@ -577,7 +574,7 @@
             object-fit: cover;
             margin-bottom: 2rem;
         }
-      
+
         .bio-awards {
             margin-top: 2rem;
             text-align: center;
@@ -698,13 +695,11 @@
             text-decoration: none;
             font-size: 0.9rem;
             pointer-events: auto !important;
-
         }
 
         .legal-links a:hover {
             color: #2980b9;
         }
-
 
         .modal {
             display: none;
@@ -945,7 +940,6 @@
     <nav id="nav">
         <div class="nav-logo">
             <img src="/images/logo.jpg" alt="PLN Prod Logo">
-
             <p>PLN Prod</p>
         </div>
         <ul>
@@ -963,9 +957,7 @@
         <div class="mosaic-container" id="mosaic">
             <div class="mosaic-item" data-project="project1">
               <video autoplay muted loop playsinline>
-
                   <source src="/images/guitare_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                <div class="content">
@@ -994,7 +986,6 @@
             <div class="mosaic-item" data-project="project4">
               <video autoplay muted loop playsinline>
                   <source src="/images/orchestre_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1006,7 +997,6 @@
             <div class="mosaic-item" data-project="project5">
               <video autoplay muted loop playsinline>
                   <source src="/images/Valses Poétiques_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                  <div class="content">
@@ -1018,8 +1008,7 @@
             </div>
             <div class="mosaic-item" data-project="project6">
                <video autoplay muted loop playsinline>
-                 <source src="/images/Golberg_loop.mp4" type="video/mp4">
-
+                  <source src="/images/Golberg_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 
                 <div class="content">
@@ -1030,9 +1019,7 @@
             </div>
             <div class="mosaic-item" data-project="project7">
                <video autoplay muted loop playsinline>
-
                   <source src="/images/cascade_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1043,9 +1030,7 @@
             </div>
             <div class="mosaic-item" data-project="project8">
                <video autoplay muted loop playsinline>
-
                   <source src="/images/nature_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1057,9 +1042,7 @@
             </div>
             <div class="mosaic-item" data-project="project9">
                 <video autoplay muted loop playsinline>
-
                   <source src="/images/magnolia_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 <div class="content">
                     <h1>Jardin de rêve</h1>
@@ -1069,9 +1052,7 @@
             </div>
             <div class="mosaic-item" data-project="project10">
                <video autoplay muted loop playsinline>
-
                   <source src="/images/arc_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
 
@@ -1083,9 +1064,7 @@
             </div>
             <div class="mosaic-item" data-project="project11">
                <video autoplay muted loop playsinline>
-
                   <source src="/images/ski_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1097,9 +1076,7 @@
             </div>
             <div class="mosaic-item" data-project="project12">
                <video autoplay muted loop playsinline>
-
                   <source src="/images/yoga_loop.mp4" type="video/mp4">
-
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 <div class="content">
                     <h1>Autres sports</h1>
@@ -1260,7 +1237,6 @@
     project1: "https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif",
     project2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
     project3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
-
     project4: "/images/cordissimo.jpg",
     video401: "https://i9.ytimg.com/vi_webp/ivcBJ4Bbm68/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWChAMA8=&rs=AOn4CLBmrBfzWPmJ29BzVUtEoLyOgwAE_A",
     video402: "https://i9.ytimg.com/vi_webp/hsVlgnPXVec/mq2.webp?sqp=CNiJ6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB94aW9DJ8Bu4EE8ccd87iOsYS3ug",
@@ -1273,7 +1249,6 @@
     //video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
     //video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
     project6: "/images/goldberg.jpg",
-
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
     project9: "https://media.giphy.com/media/3o6ZtaO9BZHcOjmErm/giphy.gif",
@@ -1339,7 +1314,6 @@ const relatedVideosMapping = {
                 console.log(`Flèches initialisées, currentColumn: ${currentColumn}`);
             } catch (error) {
                 console.error('Erreur dans initArrows:', error);
-
             }
         }
 
@@ -1366,7 +1340,7 @@ const relatedVideosMapping = {
             }
         }
 
-       // Naviguer vers la colonne précédente
+        // Naviguer vers la colonne précédente
         function prevColumn() {
             console.log('prevColumn appelé');
             try {
@@ -1936,7 +1910,6 @@ function showVideo(projectId) {
                 s.classList.remove('active');
             });
 
-
             // Masquer la croix de fermeture au chargement
             const closeBtn = document.querySelector('.video-section .close-btn');
             if (closeBtn) {
@@ -1946,7 +1919,6 @@ function showVideo(projectId) {
                 closeBtn.style.setProperty('z-index', '-1', '!important');
                 closeBtn.style.setProperty('pointer-events', 'none', '!important');
             }
-
 
             // Afficher la mosaïque
             const hero = document.getElementById('hero');
